test/Fail/InstanceErrorMessage.err
InstanceErrorMessage.agda:24.22-26: error: [UnequalTerms]
The terms
  a
and
  c
are not equal at type Nat
when checking that the expression refl has type
(InstanceErrorMessage._ Semiring.+ a) c ≡
(InstanceErrorMessage._ Semiring.+ c) a
